[package]
name = "toto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
chrono = { version = "0.4", features = ["serde"] }
heck = "0"                                                    # What is heck?
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
terminal_size = "0.4.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
anyhow = "1.0.97"

[build-dependencies]
built = "0.5"

[package.metadata.built]
FILE_PATH = "~/Documents/toto"
